fix: white space margin right

--- a/services/web-app/components/footer/footer.module.scss
+++ b/services/web-app/components/footer/footer.module.scss
@@ -12,6 +12,7 @@
 @use '@carbon/react/scss/type' as type;
 
 .container {
+  margin-right: -2px;
   background: colors.$black-100;
 }
 
