--- a/services/web-app/components/hero/hero.module.scss
+++ b/services/web-app/components/hero/hero.module.scss
@@ -23,6 +23,7 @@ $hero-height: convert.rem(560px);
     left: 0;
     width: calc(100vw - var(--scrollbar-width));
     height: $hero-height;
+    margin-right: 20px;
     background: theme.$background;
     content: '';
   }
