--- a/services/web-app/styles/_base.scss
+++ b/services/web-app/styles/_base.scss
@@ -36,6 +36,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  margin-right: 2px;
 }
 
 #__next {
